tests/sksl/errors/DuplicateInterfaceBlockField.glsl
### Compilation failed:

error: 5: symbol 'myFloat' was already defined
float4 myFloat;
^^^^^^^^^^^^^^
1 error
